--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,5 +20,12 @@
         "@typescript-eslint"
     ],
     "rules": {
+        "react/function-component-definition": [
+            2,
+            {
+                "namedComponents": "arrow-function",
+                "unnamedComponents": "arrow-function"
+            }
+        ]
     }
 }
