--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,6 +26,27 @@
                 "namedComponents": "arrow-function",
                 "unnamedComponents": "arrow-function"
             }
+        ],
+        "react/jsx-filename-extension": [
+            1,
+            {
+                "extensions": [
+                    ".tsx",
+                    ".jsx"
+                ]
+            }
+        ],
+        "comma-dangle": [
+            "error",
+            "never"
+        ],
+        "import/no-unresolved": [
+            2,
+            {
+                "ignore": [
+                    "\\.ts$"
+                ]
+            }
         ]
     }
 }
