--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,8 @@
 {
     "env": {
         "browser": true,
-        "es2021": true
+        "es2021": true,
+        "jest": true
     },
     "extends": [
         "plugin:react/recommended",
@@ -47,6 +48,10 @@
                     "\\.ts$"
                 ]
             }
+        ],
+        "jsx-a11y/label-has-associated-control": [
+            0,
+            {}
         ]
     }
 }
