--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -59,6 +59,9 @@
         ],
         "react/jsx-wrap-multilines": [
             0
+        ],
+        "react/no-array-index-key": [
+            0
         ]
     }
 }
